<resources>
    <string name="app_name">MoviesAndActors</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="splash_url">www.cotemig.com.br</string>

    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="login_signin">Entrar</string>
    <string name="login_title">Login</string>
    <string name="login_save">Salvar</string>

    <string name="welcome_title">Seja Bem-vindo</string>
    <string name="welcome_subtitle">Seja bem-vindo ao app Filmes e Atores</string>
    <string name="welcome_signup">Cadastre-se</string>
    <string name="welcome_login">Login</string>

    <string name="main_welcomemessage">Bem-vindo %s</string>

    <string name="register_createaccount">Crie sua conta</string>
    <string name="register_nome">Nome</string>
    <string name="register_createaccountbutton">Criar conta</string>

    <string name="lbl_buttonMovies">Filmes</string>
    <string name="lbl_buttonSeries">Series</string>
    <string name="lbl_buttonAtores">Atores</string>
    <string name="lbl_buttonAtoresPopulares">Atores Populares</string>
    <string name="lbl_buttonRegioesDisponiveis">Regiões Disponíveis</string>
    <string name="lbl_buttonGenerosOficiais">Gêneros Oficiais</string>
    <string name="lbl_buttonProvedoresStreaming">Provedores de Streaming</string>

    <string name="list_movies_data">Data</string>

    <string name="item_movie_name">Nome do Filme</string>
    <string name="item_serie_name">Nome da Serie</string>

    <string name="provedores_streaming_title">Provedores de Streaming</string>
    <string name="regioes_disponiveis_title">Regiões Disponiveis</string>
    <string name="generos_filmes_title">Gêneros de Filmes</string>
    <string name="atores_populares_title">Atores Populares</string>
    <string name="item_atores_nome">Nome do Ator</string>
    <string name="item_cast_nome_ator">Nome do Ator</string>

</resources>