<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.activities.WelcomeActivity">

    <!-- ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/background" / -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="174dp"
        android:layout_marginRight="56dp"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/welcome_title"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/subtitle"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="87dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/signup"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/button_white"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome_login"
        android:textAllCaps="false"
        android:textColor="@color/black2"
        android:textSize="16sp" />

</RelativeLayout>