<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <!-- TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/main_welcomemessage"
        android:textColor="@color/black"
        android:textSize="30sp" / -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="170dp"
        android:layout_height="184dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/buttonMovies"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:text="@string/lbl_buttonMovies"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonSeries"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonMovies"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonSeries"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonAtores"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonSeries"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonAtores"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <!-- Button
        android:id="@+id/buttonAtoresPopulares"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonAtores"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonAtoresPopulares"
        android:textColor="@color/white"
        android:textSize="15sp" / -->

    <Button
        android:id="@+id/buttonProvedoresStreaming"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonAtores"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonProvedoresStreaming"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonRegioesDisponiveis"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonProvedoresStreaming"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonRegioesDisponiveis"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonGenerosOficiais"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/buttonRegioesDisponiveis"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/robotoregular"
        android:textAllCaps="false"
        android:text="@string/lbl_buttonGenerosOficiais"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>