<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="170dp"
                android:layout_height="184dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/register_createaccount"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/register_nome"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/register_nome"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/login_email"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/login_password"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/password"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/robotoregular"
                android:textAllCaps="false"
                android:text="@string/login_save"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>